About page: section padding + overflow fixes

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@
 .screen-reader-text:focus {
   background-color: #f1f1f1;
   border-radius: 3px;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   clip: auto !important;
   color: #21759b;
   display: block;
@@ -1198,19 +1198,25 @@ object {
 }
 
 /* masthead */
-/* line 40, ../scss/base/_layout.scss */
-section {
+/* line 41, ../scss/base/_layout.scss */
+section,
+.section-padding-x2 {
   /* MÖJLIGT ATT DETTA MÅSTE SPECIFICERAS BÄTTRE, <section> är inte så specifikt liksom */
   padding: 150px 0;
 }
 
 /* line 44, ../scss/base/_layout.scss */
+.section-padding {
+  padding: 75px 0;
+}
+
+/* line 48, ../scss/base/_layout.scss */
 #about {
   text-align: center;
 }
 
 @media (min-width: 780px) {
-  /* line 54, ../scss/base/_layout.scss */
+  /* line 58, ../scss/base/_layout.scss */
   .entry-content.about-text {
     -webkit-column-count: 2;
     /* Chrome, Safari, Opera */
@@ -1226,13 +1232,13 @@ section {
 }
 /* Spacing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-/* line 68, ../scss/base/_layout.scss */
+/* line 72, ../scss/base/_layout.scss */
 button,
 .button {
   margin-bottom: 1rem;
 }
 
-/* line 73, ../scss/base/_layout.scss */
+/* line 77, ../scss/base/_layout.scss */
 input,
 textarea,
 select,
@@ -1240,7 +1246,7 @@ fieldset {
   margin-bottom: 1.5rem;
 }
 
-/* line 83, ../scss/base/_layout.scss */
+/* line 87, ../scss/base/_layout.scss */
 pre,
 blockquote,
 dl,
@@ -1256,7 +1262,7 @@ form {
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Self Clearing Goodness */
-/* line 93, ../scss/base/_layout.scss */
+/* line 97, ../scss/base/_layout.scss */
 .container:after,
 .row:after,
 .u-cf {
